styles.css
/* general */
body {
	margin: 0;
	background-color: #FFFFFF;
	display: inline-block;
	min-width: 100%;
}
a {
	color: #2A3957;
	text-decoration: none;
}
a:hover {text-decoration: underline}
h1 {
	margin: 1.5em 0 0.5em 0;
	font-size: 16pt;
	font-weight: bold;
	color: #2A3957;
}
li {padding: 0.35em 0}
fieldset {
	display: inline-block;
	border: 2px solid #BFBFBF;
}
select {vertical-align: top}
table {border-collapse: collapse}
th, td {
	padding: 0.25em 0.75em;
	text-align: center;
}
th {
	background-color: #EFEFEF;
	font-weight: normal;
	font-style: italic;
}
td.leftAlign {text-align: left}
td.rightAlign {text-align: right}
td.strikethrough {text-decoration: line-through}
tr.altRow td {background-color: #EFEFEF}
.error {color: #AB0000}
.gray {color: #7F7F7F}
.code {
	display: inline-block;
	margin: 1em 0;
	padding: 1em;
	background-color: #F7F7B5;
	font-family: monospace;
}
.tight {
	padding: 0;
	margin: 0;
}
.submitButton {
	border: 1px solid #000000;
	margin: 0;
	display: inline-block;
	padding: 0.25em 0.5em;
	cursor: pointer;
	background-color: #EFEFEF;
	font-size: 12pt;
	font-weight: bold;
	text-decoration: none;
	font-family: sans-serif;
}
.submitButton:hover {
	background-color: #0055A2;
	color: #FFFFFF
}
.smallSubmitButton {
	border: 1px solid #000000;
	margin: 0;
	display: inline-block;
	padding: 0.25em 0.5em;
	cursor: pointer;
	background-color: #EFEFEF;
	font-size: 10pt;
	text-decoration: none;
	font-family: sans-serif;
}
.smallSubmitButton:hover {
	background-color: #0055A2;
	color: #FFFFFF;
}

/* page layout */
.headerBox {
	margin: 0;
	padding: 0.5em 0.75em;
	text-align: left;
	white-space: nowrap;
	font-size: 28pt;
	font-weight: bold;
	font-family: sans-serif;
	color: #2A3957;
}
.headerBox img {
	vertical-align: middle;
	margin-right: 0.25em;
}
ul.headerButtons {
	margin: 0;
	padding: 0 0 0 3.5em;
	list-style: none;
	white-space: nowrap;
	background-color: #2A3957;
}
ul.headerButtons li {
	display: inline-block;
	margin: 0;
	padding: 0;
	text-align: center;
}
ul.headerButtons a {
	display: inline-block;
	padding: 1em 1.45em;
	background-color: #2A3957;
	font-size: 12pt;
	font-weight: bold;
	text-decoration: none;
	font-family: sans-serif;
	color: #FFFFFF;
}
ul.headerButtons a.current {
	background-color: #FFFFFF;
	color: #2A3957;
}
ul.headerButtons a:hover {
	background-color: #0055A2;
	color: #FFFFFF;
}
.mainContent {
	padding: 0.5em 2.5em 4em 2.5em;
	line-height: 150%;
	font-size: 12pt;
	font-family: sans-serif;
}
.footerBox {
	position: fixed;
	bottom: 0;
	width: 100%;
	margin: 0;
	padding: 0.75em 0.75em;
	text-align: center;
	font-size: 8pt;
	font-family: sans-serif;
	background-color: #2A3957;
	color: #FFFFFF;
}
.footerBox a {color: #FFFFFF}

/* elimination bracket table */
table.bracket {border-collapse: collapse}
table.bracket th {
	padding: 0.25em 2em;
	font-weight: normal;
	font-style: italic;
}
table.bracket td {
	padding: 0 0.5em;
	font-size: 9pt;
}
table.bracket td.base {border-bottom: 1px solid #333333}
table.bracket td.wall {border-left: 1px solid #333333}
table.bracket td.branch {
	border-bottom: 1px solid #333333;
	border-left: 1px solid #333333;
}
table.bracket td.button {padding-top: 0.75em}

